done index.html, add styles

--- a/index.html
+++ b/index.html
@@ -151,11 +151,9 @@
                     Иванов Иван
                 </p>
                 <div class="footer__info">
-                    (&copy;) 2018. Все права защищены.
+                    &copy; 2018. Все права защищены.
                 </div>
             </div>
         </footer>
-
     </body>
-
 </html>
