added youtube button positioning

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     стандартной "рыбой" для текстов на латинице с начала XVI века.
                 </p>
                 <div class="video-wrap">
-                    <iframe src="https://www.youtube.com/embed/BZ8Q_c0Olyk" title="YouTube video player" class="video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/BZ8Q_c0Olyk?controls=0" title="YouTube video player" class="video" frameborder="0"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="play">
                         <img src="img/play.png" alt="play">
                     </div>
