changed the picture in the projects

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="projects__wrap">
                     <div class="projects__item">
                         <div class="projects__img-wrap">
-                            <img src="img/paper.png" alt="project" class="projects__img">
+                            <img src="img/project.png" alt="project" class="projects__img">
                         </div>
                         <div class="projects__description">
                             <h3 class="projects__title">40+</h3>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="projects__item">
                         <div class="projects__img-wrap">
-                            <img src="img/paper.png" alt="project" class="projects__img">
+                            <img src="img/project.png" alt="project" class="projects__img">
                         </div>
                         <div class="projects__description">
                             <h3 class="projects__title">40+</h3>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="projects__item">
                         <div class="projects__img-wrap">
-                            <img src="img/paper.png" alt="project" class="projects__img">
+                            <img src="img/project.png" alt="project" class="projects__img">
                         </div>
                         <div class="projects__description">
                             <h3 class="projects__title">40+</h3>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="projects__item">
                         <div class="projects__img-wrap">
-                            <img src="img/paper.png" alt="project" class="projects__img">
+                            <img src="img/project.png" alt="project" class="projects__img">
                         </div>
                         <div class="projects__description">
                             <h3 class="projects__title">40+</h3>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="projects__item">
                         <div class="projects__img-wrap">
-                            <img src="img/paper.png" alt="project" class="projects__img">
+                            <img src="img/project.png" alt="project" class="projects__img">
                         </div>
                         <div class="projects__description">
                             <h3 class="projects__title">40+</h3>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="projects__item">
                         <div class="projects__img-wrap">
-                            <img src="img/paper.png" alt="project" class="projects__img">
+                            <img src="img/project.png" alt="project" class="projects__img">
                         </div>
                         <div class="projects__description">
                             <h3 class="projects__title">40+</h3>
