--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header class="header">
+        <header class="header"> <!--хэдер-->
             <div class="wrapper">
                 <div class="menu-wrap">
-                    <ul class="menu">
+                    <ul class="menu"> <!--верхнее меню-->
                         <li class="menu__item">
                             <a href="#" class="menu__link menu__link--current">
                                 Главная
@@ -43,13 +43,15 @@
                         </li>
                     </ul>
                 </div>
-                <div class="hero">
-                    <h1 class="hero__title">Дизайн и верстка</h1>
+                <div class="hero"> <!--главный заголовок с текстом-->
+                    <h1 class="hero__title">
+                        Дизайн и верстка
+                    </h1>
                     <p class="hero__text">
                         Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
                         стандартной "рыбой" для текстов на латинице с начала XVI века.
                     </p>
-                    <div class="hero__btn-wrap">
+                    <div class="hero__btn-wrap"> <!--кнопка-->
                         <a href="#" class="hero__btn btn">
                             Написать мне
                         </a>
@@ -57,7 +59,7 @@
                 </div>
             </div>
         </header>
-        <div class="about">
+        <div class="about"> <!--блок "обо мне"-->
             <div class="wrapper">
                 <h2 class="about__title">
                     Обо мне
@@ -68,7 +70,7 @@
                 </p>
             </div>
         </div>
-        <div class="projects">
+        <div class="projects"> <!-- блок с проектами -->
             <div class="wrapper">
                 <div class="projects__wrap">
                     <div class="projects__item">
@@ -128,7 +130,7 @@
                 </div>
             </div>
         </div>
-        <div class="work">
+        <div class="work"> <!-- блок о работе, в нем есть видео -->
             <div class="wrapper">
                 <h2 class="work__title">
                     Как я работаю
@@ -137,15 +139,15 @@
                     Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
                     стандартной "рыбой" для текстов на латинице с начала XVI века.
                 </p>
-                <div class="video-wrap">
+                <div class="video-wrap"> <!-- видео -->
                     <iframe src="https://www.youtube.com/embed/BZ8Q_c0Olyk?controls=0" title="YouTube video player" class="video" frameborder="0"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="play">
-                        <img src="img/play.png" alt="play">
+                        <img src="img/play.png" alt="play"> <!-- красивая кнопка -->
                     </div>
                 </div>
             </div>
         </div>
-        <footer class="footer">
+        <footer class="footer"> <!-- футер -->
             <div class="wrapper">
                 <p class="footer__text">
                     Иванов Иван
